--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
 <div>helooo</div>
+
+<button class="btn" routerLink="/login" >Login</button>
+<button class="btn" routerLink="/dashboard" >dashboard</button>
+
+<router-outlet></router-outlet>
