--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
-<div>helooo</div>
+<div class="head">Angular App</div>
 
-<button class="btn" routerLink="/login" >Login</button>
-<button class="btn" routerLink="/dashboard" >dashboard</button>
+
+<div class="center">
+  <button class="btn" routerLink="/login" >Login</button>
+  <button class="btn" routerLink="/dashboard" >dashboard</button>
+</div>
 
 <router-outlet></router-outlet>
