--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,23 @@
+*{
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.head{
+    margin:  0 auto;
+    padding: 20px;
+    background-color: whitesmoke;
+    text-align: center;
+    font-size: 20px;
+}
 .btn{
-    margin: 20px
+    margin: 20px;
+    padding: 10px 20px;
+    cursor: pointer;
+
+}
+.center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
